# NeuralACD

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  __init__.py  broken.json  cache_planes.py  create_cutting_planes.py  decompose.py  decomposed.glb  eval_coacd.py  eval_neuralacd.py  evaluate_neuralacd  evaluate_neuralacd.py  generate_parts.py  generate_targets.py  input_mesh.ply  metrics.csv  normalized.ply  normalized_mesh.ply  obj_to_cloud.py  plane_cache.json  pointnet2_ops-3.0.0-cp310-cp310-linux_x86_64.whl  process_parts.py  provider.py  redistribute_shapenet.py  requirements.txt  rotated.ply  stats.txt  structure.glb  test.py  test2.py  train.py  visualize_history.py  viz
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
1/: plane_cache.json
blender/: generate_plane.py  generate_plane_axis_aligned.py
config/: config.yaml
data/: train_data.h5  val_data.h5
docker/: Dockerfile  environment.yml  train.ipynb
docker/model/: model.py  vn_pointnet.py
evaluation/: eval_coacd.py  eval_neuralacd.py
lib/: CMakeLists.txt  bindings.cpp
lib/cmake/: openvdb.cmake
lib/include/: clip.hpp  clustering.hpp  config.hpp  core.hpp  cost.hpp  cuboid.hpp  dbscan.hpp  decompose_cuboids.hpp  decompose_spheres.hpp  generate.hpp  hausdorff.hpp  icosphere.hpp  jlinkage.hpp  mesh.hpp  nanoflann.hpp  preprocess.hpp  process.hpp  sobol.hpp
lib/src/: clip.cpp  clustering.cpp  core.cpp  cost.cpp  cuboid.cpp  dbscan.cpp  decompose_cuboids.cpp  decompose_spheres.cpp  generate.cpp  icosphere.cpp  jlinkage.cpp  mesh.cpp  preprocess.cpp  process.cpp  sobol.cpp
lightning_logs/version_0/: events.out.tfevents.1750559492.edfokin-pc.154575.0
lightning_logs/version_1/: events.out.tfevents.1750559533.edfokin-pc.155003.0
lightning_logs/version_2/: events.out.tfevents.1750559561.edfokin-pc.155268.0
linux/: BaseUtils.py  cache_planes.py
model/: checkpoint.ckpt  model.py  model_cpu.py  test_model.py  vn_pointnet.py
model/utils/: vn_pointnet.py
scripts/: decompose.py  generate_gallery.py  get_planes.py  mark_cuts.py  preprocess.py  visualize_bulk.py
tools/: evaluate_coacd.py  evaluate_neuralacd.py  generate_targets.py  obj_to_cloud.py  process_shapenet.py  visualize_history.py
tools/hssd/: hssd_filter_colliders.py
utils/: ACDgen.py  BaseUtils.py  VHACD.py  jlinkage.py  misc.py  preprocessor.py  visualization.py
